--- a/css/homepage.css
+++ b/css/homepage.css
@@ -164,3 +164,18 @@ nav ul a:hover {
     width: 100vw;
     height: 100vh;
 }
+
+@media screen and (width < 500px) {
+    .sidebar {
+        height: 35%;
+        width: 100%;
+        top: 0;
+        left: 0;
+    }    
+    .main_slide {
+        height: 65%;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+    }
+}
