--- a/css/reservation.css
+++ b/css/reservation.css
@@ -8,18 +8,40 @@
 
 body {
     background-color: #e5e5e5;
-    /* font: 2em 'Oswald', sans-serif; */
 }
 
-
- form {
-    padding-top: 8em;
+ h1 {
+   margin-top: 3em;
+   margin-bottom: 0.5em;
+   font-size: 2em;
+   text-transform: uppercase; 
+   text-align: center;
  }
 
- table {
-    display: none;
- }
 
- .not_none {
-    display: block;
- }
+ #photo_container {
+   flex-wrap: wrap;
+   margin-top: .3em;
+   gap: 1em;
+}
+
+#photo_container div {
+   transition: 1s;
+   text-align: center;
+
+}
+
+#photo_container button {
+   border: none;
+   background-color: #e5e5e5;
+}
+
+#photo_container img {
+   width: 50em;
+   border-radius: 5%;
+   margin-bottom: 1em;
+}
+
+#photo_container img:hover {
+   transform: scale(1.1);
+}
